<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Stress Management Tips</string>
    <string name="about_title"><b><u>About The App</u></b></string>
    <string name="action_settings">Settings</string>
    
    <string name="go_about"><b>About the App</b></string>
     <string name="forward"><b>Proceed Forward</b></string>
    <string name="exit"><b>Close Application</b></string>
    <string name="tips"><b>Stress Management Tips</b></string>
    <string name="strategies"><b>Stress Management Strategies</b></string>
    <string name="about_app"><i>Welcome Viewers! This App is Featuring 
       Helpful Tips for Stress Management and Relevant Strategies to handle it.</i></string>
 
    
    <string name="next1"><b>Next</b></string>
    <string name="back1"><b>Share</b></string>
    <string name="home"><b>Home</b></string>

    <string name="app_id">669567093244402</string>
    
    

</resources>
