<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#08253c"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.appmasters.stresstips.StressActivity" >

    <Button
        android:id="@+id/tips"
        android:layout_width="215dp"
        android:layout_height="80dp"
        android:layout_below="@+id/go_about"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"

        android:text="@string/tips"
        android:background="#34F0BE"
        android:textColor="#AB250D"
        android:textSize="20dp"
        android:padding="2dp"  />

    <Button
        android:id="@+id/exit"
        android:layout_width="215dp"
        android:layout_height="70dp"
        android:layout_alignLeft="@+id/strategies"
        android:layout_below="@+id/strategies"
        android:layout_marginTop="31dp"

        android:text="@string/exit"
        android:background="#34F0BE"
        android:textColor="#AB250D"
        android:textSize="20dp"
        android:padding="2dp"  />

    <Button
        android:id="@+id/strategies"
        android:layout_width="215dp"
        android:layout_height="80dp"
        android:layout_alignLeft="@+id/tips"
        android:layout_below="@+id/tips"
        android:layout_marginTop="32dp"

        android:text="@string/strategies"
        android:background="#34F0BE"
        android:textColor="#AB250D"
        android:textSize="20dp"
        android:padding="2dp"  />

    <Button
        android:id="@+id/go_about"
        android:layout_width="215dp"
        android:layout_height="70dp"
        android:layout_alignLeft="@+id/tips"
        android:layout_alignParentTop="true"
        android:layout_marginTop="19dp"

        android:text="@string/go_about"
        android:background="#34F0BE"
        android:textColor="#AB250D"
        android:textSize="20dp"
        android:padding="2dp"  />

</RelativeLayout>