<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#08253c"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.appmasters.stressquotations.StressActivity" >

    <ImageView
        android:id="@+id/logo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/logo1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/forward"
        android:layout_below="@+id/logo1"
        android:layout_marginTop="14dp"
        android:text="@string/about_title"
        android:textColor="#FCF005"
        android:textSize="24dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/forward"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:background="#34F0BE"
        android:text="@string/forward"
        android:textColor="#AB250D"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/logo1"
        android:layout_below="@+id/textView2"
        android:gravity="center_vertical"
        android:text="@string/about_app"
        android:textColor="#A7EEEF"
        android:textSize="22dp"
        android:textStyle="italic" />

</RelativeLayout>